2010-07-07  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Amanda_Taper_Scribe.pl: stringify changer errors

2010-07-07  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm: more consistent handling of denial
	  of use of a second tape due to user configuration; dump_cb adds
	  the config_denial_message parameter
	* server-src/taper.pl: use new parameter
	* installcheck/Amanda_Taper_Scribe.pl: updated tests

2010-07-06  Orion Poplawski <orion@cora.nwra.com>
	* server-src/amoverview.pl: fix parsing for newer amadmin find output

2010-07-06  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/s3.c: fix typo (that I added, not Nandan)

2010-07-06  Nandan Athawale <nandan.athawale@gmail.com>
	* device-src/s3.c: use Amazon's HTTP response headers to calculate a
	  time offset for the local clock, to automatically work around time
	  skew

2010-06-29  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Makefile.am installcheck/chunker.pl: new check
	* perl/Amanda/Header.swg: bug fix
	* server-src/chunker.c: bug fixes, add support for a fake ENOSPC for
	  testing

2010-06-28  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/driverio.c: fix format specifies

2010-06-28  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Config.swg common-src/conffile.c common-src/conffile.h:
	  add new tapetype params: PART_SIZE, PART_CACHE_TYPE, PART_CACHE_DIR,
	  and PART_CACHE_MAX_SIZE and dumptype param ALLOW_SPLIT; only print
	  deprecation warnings once per process; deprecate TAPE_SPLITSIZE,
	  FALLBACK_SPLITSIZE, and SPLIT_DISKBUFFER
	* example/amanda.conf.in example/template.d/amanda-S3.conf.in
	  example/template.d/amanda-harddisk.conf.in
	  example/template.d/dumptypes: remove old params
	* installcheck/Amanda_Config.pl
	  installcheck/Amanda_Taper_Scribe.pl
	  installcheck/Installcheck/Dumpcache.pm
	  installcheck/taper.pl: update tests
	* man/xml-source/amanda-compatibility.7.xml: document deprecations
	  and what to do about them